# chargeapp

./: Cross.toml  README.md  package.json
backend/: Cargo.toml  config.json  tauri.conf.json
backend/src/: can.rs  cloud.rs  ems_core.rs  gps_4g.rs  main.rs  modbus.rs  types.rs
backend/src/devices/: bms.rs  charger.rs  genset.rs  mod.rs  pcs.rs  pv_dcdc.rs
backend/src/drivers/: can.rs  cloud.rs  gps_4g.rs  mod.rs  modbus.rs
docs/: PROJECT_STRUCTURE.md
frontend/: package-lock.json
frontend/src-tauri/src/: main.rs
shared/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
