[package]
name = "ems-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
socketcan = "2.0"
tokio-socketcan = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.10"
rumqttc = "0.24"  # MQTT 客户端
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.7"
tauri = { version = "1.0", features = ["shell-open"] }
tiny_http = "0.12"
log = "0.4"
env_logger = "0.10"
